force-app/main/default/objects/Industry_Boost__mdt/Industry_Boost__mdt.object-meta.xml
<CustomObject>
    <label>Industry Boost</label>
    <pluralLabel>Industry Boosts</pluralLabel>
</CustomObject>