force-app/main/default/objects/Industry_Boost__mdt/fields/Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Points__c</fullName>
    <label>Bonus Points</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>