force-app/main/default/objects/Industry_Boost__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>