force-app/main/default/objects/Industry_Boost__mdt/fields/Reason_Template__c.field-meta.xml
<CustomField>
    <fullName>Reason_Template__c</fullName>
    <label>Reason Template</label>
    <type>Text</type>
    <length>255</length>
</CustomField>