force-app/main/default/objects/Industry_Boost__mdt/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>